# stiff-physics

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
docs/: index.html  manifest.json  stiff_physics.js  stiff_physics_bg.wasm
src/: app.rs  audio_player.rs  eigenvalue_decomposition.rs  lib.rs  main.rs  stiff_physics.rs
