[package]
name = "stiff-physics"
version = "0.1.0"
authors = ["Rasmus Brönnegård"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.44"
cpal = { version = "0.13.4", features = ["wasm-bindgen"] }
eframe = "0.18.0" # Gives us egui, epi and web+native backends
hyperdual = "1.0.0"
nalgebra = "0.31.0"
puffin = "0.13.2"
puffin_egui = { version = "0.15.0", optional = true }
rtrb = "0.2.0"
serde = { version = "1", features = ["derive"], optional = true }
triple_buffer = "6.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.55", features = ["EventTarget"] }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
profiler = ["eframe/puffin", "puffin_egui"] # Enable if you want to profile app with puffin

[profile.dev]
opt-level = 2 # To make dissasembly closer to release

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
